--- a/pages/community.html
+++ b/pages/community.html
@@ -46,12 +46,11 @@
         <li><a href="schedule.html">일정</a></li>
         <li><a href="library.html">도서관</a></li>
         <li><a aria-current="page" href="community.html">게시판</a></li>
-        <li><a href="myspace.html">내 프로필</a></li>
       </ul>
     </nav>
   </header>
   <main id="main">
-    <h1>게시판</h1>
+    <h1>< 게시판 ></h1>
     
     <!-- 고정 공지사항 -->
     <div class="gossip-banner">
@@ -80,16 +79,6 @@
         </div>
       </div>
     </div>
-
-    <!-- 오늘의 독서 명언 -->
-    <section class="panel" style="margin-top:3rem">
-      <h2>💭 오늘의 독서 명언</h2>
-      <div class="game-container" style="padding:1rem">
-        <p id="quoteDescription" style="margin-bottom:.8rem;font-size:.9rem">오늘의 명언을 랜덤으로 뽑아보세요!</p>
-        <button class="btn game-btn" id="randomBookBtn" style="font-size:.9rem;padding:.6rem 1.2rem">🎲 랜덤 명언 뽑기</button>
-        <div id="randomResult" style="margin-top:1rem"></div>
-      </div>
-    </section>
 
     <!-- 공지사항 -->
     <section class="panel" style="margin-top:3rem">
@@ -156,22 +145,6 @@
         </div>
         <div class="note-item free">
           <div class="note-header">
-            <span class="note-emoji">📖</span>
-            <span class="note-title">독서 모임 후기 공유합니다</span>
-          </div>
-          <div class="note-meta">
-            <span class="author">독서왕</span>
-            <span class="divider">·</span>
-            <span class="stats">💬 12</span>
-            <span class="divider">·</span>
-            <span class="stats">👁️ 89</span>
-            <span class="divider">·</span>
-            <span class="date">5시간 전</span>
-          </div>
-          <div class="note-preview">지난 주말에 있었던 독서 모임이 정말 알찼어요. 다들 오셔서...</div>
-        </div>
-        <div class="note-item free">
-          <div class="note-header">
             <span class="note-emoji">💭</span>
             <span class="note-title">책을 읽다가 든 생각들...</span>
           </div>
@@ -221,12 +194,22 @@
       </div>
     </section>
 
+    <!-- 오늘의 독서 명언 -->
+    <section class="panel" style="margin-top:3rem">
+      <h2>💭 오늘의 독서 명언</h2>
+      <div class="game-container" style="padding:1rem">
+        <p id="quoteDescription" style="margin-bottom:.8rem;font-size:.9rem">오늘의 명언을 랜덤으로 뽑아보세요!</p>
+        <button class="btn game-btn" id="randomBookBtn" style="font-size:.9rem;padding:.6rem 1.2rem">🎲 랜덤 명언 뽑기</button>
+        <div id="randomResult" style="margin-top:1rem"></div>
+      </div>
+    </section>
+
   </main>
   
   <footer class="site-footer">
     <div class="footer-content">
       <div class="footer-links">
-        <a href="faq.html">Q&A</a>
+        <a href="about.html">About</a>
         <span class="footer-divider">·</span>
         <a href="https://github.com/sihyeon25/Book-exchange" target="_blank" rel="noopener noreferrer">GitHub</a>
         <span class="footer-divider">·</span>
