--- a/pages/library.html
+++ b/pages/library.html
@@ -45,7 +45,6 @@
         <li><a href="schedule.html">일정</a></li>
         <li><a aria-current="page" href="library.html">도서관</a></li>
         <li><a href="community.html">게시판</a></li>
-        <li><a href="myspace.html">내 프로필</a></li>
       </ul>
     </nav>
   </header>
@@ -77,10 +76,6 @@
               <option value="rating">평점순</option>
             </select>
           </label>
-          <label style="display:flex;align-items:center;gap:.4rem">
-            <input type="checkbox" id="favOnlyCheck">
-            <span>즐겨찾기만</span>
-          </label>
         </div>
       </div>
     </div>
@@ -99,7 +94,7 @@
   <footer class="site-footer">
     <div class="footer-content">
       <div class="footer-links">
-        <a href="faq.html">Q&A</a>
+        <a href="about.html">About</a>
         <span class="footer-divider">·</span>
         <a href="https://github.com/sihyeon25/Book-exchange" target="_blank" rel="noopener noreferrer">GitHub</a>
         <span class="footer-divider">·</span>
