코드 품질 개선 및 문서화
- 모든 HTML/CSS/JS 파일에 상세한 주석 추가
- 코드 이해를 위한 기능별 섹션 주석 작성
- 파일별 목적과 기능 명시
- 불필요한 myspace.js 파일 삭제
- 코드 구조 및 의존성 관계 명확화
- 접근성 및 사용자 경험 고려사항 주석 추가

--- a/index.html
+++ b/index.html
@@ -1,7 +1,31 @@
+<!--
+  ====================================
+  BOOK EXCHANGE PROJECT - HOME PAGE
+  교환독서 프로젝트 메인 홈페이지
+  ====================================
+  
+  페이지 구성:
+  1. 인트로 오버레이 (4.5초)
+  2. 메인 헤더 + 네비게이션
+  3. About 섹션 (프로젝트 소개)
+  4. How It Works 섹션 (사용법)
+  5. Team 섹션 (멤버 소개)
+  6. About Site 섹션 (사이트 소개)
+  7. 푸터
+  
+  특징:
+  - 빈티지 북 테마 디자인
+  - 서다 접기/펼치기 애니메이션
+  - 전체 화면 스크롤 스냅 효과
+  - 반응형 디자인
+-->
 <!DOCTYPE html>
 <html lang="ko" data-theme="heritage">
 <head>
-  <!-- 문자 인코딩 및 뷰포트 설정 -->
+  <!-- ====================================
+       META & BASIC SETUP
+       기본 메타 정보 및 설정
+  ===================================== -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>교환독서 – 홈</title>
