--- a/pages/about.html
+++ b/pages/about.html
@@ -1,6 +1,26 @@
+<!--
+  ====================================
+  ABOUT PAGE
+  프로젝트 소개 페이지
+  ====================================
+  
+  페이지 기능:
+  1. 웹사이트 소개
+  2. 개발자 정보
+  3. 기술 스택 설명
+  4. GitHub 링크 및 연락처
+  
+  특징:
+  - 심플한 정보 레이아웃
+  - 외부 링크 접근성 고려
+-->
 <!DOCTYPE html>
 <html lang="ko" data-theme="heritage">
 <head>
+  <!-- ====================================
+       META & BASIC SETUP
+       기본 메타 정보 및 설정
+  ===================================== -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About – 교환독서</title>
@@ -30,7 +50,6 @@
         <li><a href="schedule.html">일정</a></li>
         <li><a href="library.html">도서관</a></li>
         <li><a href="community.html">게시판</a></li>
-        <li><a href="myspace.html">내 프로필</a></li>
         <li><a aria-current="page" href="about.html">About</a></li>
       </ul>
     </nav>
