--- a/pages/book-detail.html
+++ b/pages/book-detail.html
@@ -1,6 +1,29 @@
+<!--
+  ====================================
+  BOOK DETAIL PAGE
+  책 상세 정보 페이지
+  ====================================
+  
+  페이지 기능:
+  1. 책 상세 정보 (표지, 제목, 저자 등)
+  2. 별점 표시 (반별 지원)
+  3. 리뷰 작성 및 보기
+  4. 리뷰에 답글 기능
+  5. 리뷰 정렬 (최신순/별점순)
+  6. 내 리뷰 복사 기능
+  
+  특징:
+  - 추천인별 색상 테마
+  - 로컬스토리지 리뷰 저장
+  - 답글 시스템
+-->
 <!DOCTYPE html>
 <html lang="ko" data-theme="heritage">
 <head>
+  <!-- ====================================
+       META & BASIC SETUP
+       기본 메타 정보 및 설정
+  ===================================== -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>교환독서 – 책 상세</title>
