--- a/pages/community.html
+++ b/pages/community.html
@@ -1,6 +1,27 @@
+<!--
+  ====================================
+  COMMUNITY PAGE
+  게시판 페이지
+  ====================================
+  
+  페이지 기능:
+  1. 고정 공지사항 (접기/펼치기)
+  2. 일반 공지사항
+  3. 자유 게시판
+  4. 오늘의 독서 명언 (랜덤 생성)
+  
+  특징:
+  - 쇼메모 스타일 디자인
+  - 게시글 목록 호버 효과
+  - 20개 명언 데이터베이스
+-->
 <!DOCTYPE html>
 <html lang="ko" data-theme="heritage">
 <head>
+  <!-- ====================================
+       META & BASIC SETUP
+       기본 메타 정보 및 설정
+  ===================================== -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>교환독서 – 게시판</title>
