--- a/pages/library.html
+++ b/pages/library.html
@@ -1,7 +1,28 @@
+<!--
+  ====================================
+  LIBRARY PAGE
+  도서관 페이지
+  ====================================
+  
+  페이지 기능:
+  1. 모든 책 목록 표시
+  2. 실시간 검색 (제목, 저자)
+  3. 태그별 필터링
+  4. 정렬 옵션 (제목/평점/최신순)
+  5. 반응형 그리드 레이아웃
+  
+  특징:
+  - 책 카드 호버 효과
+  - 부유하는 책 아이콘 애니메이션
+  - 행정구역별 책 표시
+-->
 <!DOCTYPE html>
 <html lang="ko" data-theme="heritage">
 <head>
-  <!-- 문자 인코딩 및 뷰포트 설정 -->
+  <!-- ====================================
+       META & BASIC SETUP
+       기본 메타 정보 및 설정
+  ===================================== -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>교환독서 – 도서 목록</title>
