--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -1,7 +1,28 @@
+<!--
+  ====================================
+  SCHEDULE PAGE
+  일정 관리 페이지
+  ====================================
+  
+  페이지 기능:
+  1. 2차 교환독서 일정 표시
+  2. 사람별 필터링
+  3. 월별 슬라이드 네비게이션
+  4. 달력 표시 (오늘 날짜 하이라이트)
+  5. 일정 조율 도구
+  
+  특징:
+  - 멤버별 색상 시스템
+  - 반응형 테이블
+  - 스크롤 비헤이비어 최적화
+-->
 <!DOCTYPE html>
 <html lang="ko" data-theme="heritage">
 <head>
-  <!-- 문자 인코딩 및 뷰포트 설정 -->
+  <!-- ====================================
+       META & BASIC SETUP
+       기본 메타 정보 및 설정
+  ===================================== -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>교환독서 – 일정</title>
