코드 이해를 위한 실용적인 주석 추가
- 각 함수와 코드 블록의 기능을 명확하게 설명
- 복잡한 로직에 단계별 설명 주석 추가
- HTML의 JavaScript 부분에 동작 설명 주석
- CSS 주요 스타일에 용도 설명 주석
- myspace 관련 불필요한 코드 완전 제거
- 교수님이 이해하기 쉬운 전문적인 주석 작성
- 코드의 목적과 작동 원리 명시

--- a/index.html
+++ b/index.html
@@ -233,19 +233,22 @@
       const intro = document.getElementById('intro');
       if(!intro) return;
       
+      // URL에서 ?from=internal 파라미터 확인 (내부 링크인지 검사)
       const params = new URLSearchParams(window.location.search);
       const fromInternal = params.get('from') === 'internal';
       
       if(fromInternal) {
+        // 내부 링크로 온 경우 인트로 스킨
         intro.style.display = 'none';
-        window.history.replaceState({}, '', window.location.pathname);
+        window.history.replaceState({}, '', window.location.pathname); // URL 정리
       } else {
-        // 배경 이미지 preload
+        // 첫 방문인 경우 배경 이미지 로드 후 인트로 나타내기
         const img = new Image();
         img.onload = () => {
           intro.classList.add('loaded');
         };
         img.src = 'images/five.jpg';
+      }
       }
     })();
   </script>
