--- a/pages/library.html
+++ b/pages/library.html
@@ -126,8 +126,9 @@
   </footer>
 
   <!-- 라이브러리 상호작용 스크립트 -->
-  <script src="../js/bookData.js"></script>
-  <script src="../js/library.js"></script>
-  <script src="../js/page-transitions.js"></script>
+  <!-- 주요 기능 스크립트 로드 -->
+  <script src="../js/bookData.js"></script> <!-- 책 데이터 -->
+  <script src="../js/library.js"></script> <!-- 도서관 기능 -->
+  <script src="../js/page-transitions.js"></script> <!-- 페이지 전환 애니메이션 -->
 </body>
 </html>
