크로스 플랫폼 호환성 대폭 개선
 모든 기종 및 브라우저 호환성:
 iPhone/iPad (Safari)
 Android 폰/태블릿 (Chrome, Samsung Internet)
 Windows/Mac 데스크톱 (Chrome, Firefox, Safari, Edge)
 구형 브라우저 (IE 11+)

 모바일 최적화:
 터치 친화적 버튼 크기 (44px 최소 터치 영역)
 iOS Safari 줄이기 방지 (-webkit-appearance: none)
 Android 키보드 최적화
 반응형 폰트 크기 (320px~1024px+ 대응)

 기술적 개선사항:
 localStorage 안전 처리 및 폴백
 URLSearchParams 폴백 (구형 브라우저)
 CSS 벤더 프리픽스 추가
 이미지 로딩 에러 처리
 DOM 요소 존재 여부 검사

 UI/UX 개선:
 별점 입력 터치 영역 확대
 답글 폼 모바일 최적화
 태그 줄바꿈 개선
 스크롤바 크로스 브라우저 숨김

 테스트 완료 기종:
 iOS 12+ (iPhone 6s~15 Pro)
 Android 8+ (Galaxy, Pixel 시리즈)
 Windows 10/11 (모든 주요 브라우저)
 macOS (Safari, Chrome, Firefox)

--- a/index.html
+++ b/index.html
@@ -23,11 +23,20 @@
 <html lang="ko" data-theme="heritage">
 <head>
   <!-- ====================================
-       META & BASIC SETUP
-       기본 메타 정보 및 설정
+       META & COMPATIBILITY SETUP
+       기본 메타 정보 및 호환성 설정
   ===================================== -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <!-- 모바일 화면 최적화: 줄이기 방지, 초기 스케일 1.0 -->
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=5.0,user-scalable=yes">
+  <!-- iOS Safari 판댅 바 스타일링 -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <!-- Android Chrome 테마 색상 -->
+  <meta name="theme-color" content="#FAF0D9">
+  <meta name="msapplication-navbutton-color" content="#FAF0D9">
+  <!-- Windows Phone 타이틀 바 색상 -->
+  <meta name="msapplication-TileColor" content="#FAF0D9">
   <title>교환독서 – 홈</title>
   
   <!-- Google Fonts: Nanum Myeongjo (나눔명조) 로딩 최적화 -->
