--- a/pages/community.html
+++ b/pages/community.html
@@ -19,11 +19,15 @@
 <html lang="ko" data-theme="heritage">
 <head>
   <!-- ====================================
-       META & BASIC SETUP
-       기본 메타 정보 및 설정
+       META & COMPATIBILITY SETUP
+       기본 메타 정보 및 호환성 설정
   ===================================== -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=5.0,user-scalable=yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="theme-color" content="#4A3B5C">
+  <meta name="msapplication-TileColor" content="#4A3B5C">
   <title>교환독서 – 게시판</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
