--- a/pages/library.html
+++ b/pages/library.html
@@ -20,11 +20,15 @@
 <html lang="ko" data-theme="heritage">
 <head>
   <!-- ====================================
-       META & BASIC SETUP
-       기본 메타 정보 및 설정
+       META & COMPATIBILITY SETUP
+       기본 메타 정보 및 호환성 설정
   ===================================== -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=5.0,user-scalable=yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="theme-color" content="#3B4E3F">
+  <meta name="msapplication-TileColor" content="#3B4E3F">
   <title>교환독서 – 도서 목록</title>
   
   <!-- Google Fonts: Nanum Myeongjo (나눔명조) 로딩 최적화 -->
