반응형 레이아웃 개선: 멤버 카드 2x2 그리드 배치 최적화
- 768px~1200px 구간에서 멤버 카드 2x2 그리드 배치
- 카드 크기 300px x 380px, 사진 260px x 340px로 조정
- 사진 잘림 방지를 위한 padding 제거 및 border-radius 적용
- CSS 중복 선언 제거 (.flip-card 통합)
- index.html에 CSS 캐시 버스팅 추가 (v=20251219)
- book-detail.html 중복 코드 제거 및 appearance 속성 추가

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&family=Grandiflora+One&display=swap" rel="stylesheet">
 
   <!-- 외부 스타일시트 (루트에서 참조) -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css?v=20251219">
   
   <!-- 인트로 배경 이미지 preload -->
   <link rel="preload" as="image" href="images/five.jpg">
@@ -257,7 +257,6 @@
           intro.classList.add('loaded');
         };
         img.src = 'images/five.jpg';
-      }
       }
     })();
   </script>
