--- a/pages/about.html
+++ b/pages/about.html
@@ -123,7 +123,7 @@
         <div>
           <strong>이메일:</strong> 
           <a href="mailto:sihyeon25@naver.com" style="color:var(--primary);text-decoration:underline">
-            sihyeon25@naver.com
+            shloveme05@gmail.com
           </a>
         </div>
         <div>
