fix: 일정 테이블 모바일 가로 스크롤 활성화

--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -96,7 +96,7 @@
       </div>
       
       <!-- 월별 테이블 컨테이너 -->
-      <div style="overflow:hidden;position:relative">
+      <div style="overflow-x:auto;-webkit-overflow-scrolling:touch;position:relative">
         <div id="scheduleSlider" style="display:flex;transition:transform 0.3s ease">
           
           <!-- 10-11월 슬라이드 -->
