style: 모바일에서 월 네비게이션 버튼 숨김

--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -89,10 +89,10 @@
       <h2>2차 (10–4월)</h2>
       
       <!-- 월별 네비게이션 -->
-      <div style="display:flex;align-items:center;justify-content:center;gap:1rem;margin:1.5rem 0">
-        <button id="prevMonth" class="btn ghost" style="padding:.5rem 1rem">← 이전 달</button>
+      <div class="month-nav" style="display:flex;align-items:center;justify-content:center;gap:1rem;margin:1.5rem 0">
+        <button id="prevMonth" class="btn ghost month-nav-btn" style="padding:.5rem 1rem">← 이전 달</button>
         <h3 id="currentMonth" style="margin:0;min-width:120px;text-align:center;color:#2C3E50">12–1월</h3>
-        <button id="nextMonth" class="btn ghost" style="padding:.5rem 1rem">다음 달 →</button>
+        <button id="nextMonth" class="btn ghost month-nav-btn" style="padding:.5rem 1rem">다음 달 →</button>
       </div>
       
       <!-- 월별 테이블 컨테이너 -->
