--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -96,7 +96,7 @@
       </div>
       
       <!-- 월별 테이블 컨테이너 -->
-      <div class="table-wrapper" style="overflow-x:auto;-webkit-overflow-scrolling:touch">
+      <div class="table-wrapper" style="overflow:hidden">
         <div id="scheduleSlider" style="display:flex;transition:transform 0.3s ease">
           
           <!-- 10-11월 슬라이드 -->
