refactor: 일정 테이블을 기간-책제목-담당 형식으로 변경

--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -104,15 +104,16 @@
             <table class="table" aria-label="10-11월 일정">
               <thead>
                 <tr>
+                  <th scope="col" style="width:8rem">기간</th>
+                  <th scope="col">책 제목</th>
                   <th scope="col" style="width:8rem">담당</th>
-                  <th scope="col">읽는 책</th>
                 </tr>
               </thead>
               <tbody>
-                <tr><td data-person="태이">태이</td><td>지뢰 글리코</td></tr>
-                <tr><td data-person="희수">희수</td><td>일억 번째 여름</td></tr>
-                <tr><td data-person="시현">시현</td><td>바깥은 여름</td></tr>
-                <tr><td data-person="지원">지원</td><td>다정한 사람이 이긴다</td></tr>
+                <tr><td>10–11월</td><td>지뢰 글리코</td><td data-person="태이">태이</td></tr>
+                <tr><td>10–11월</td><td>일억 번째 여름</td><td data-person="희수">희수</td></tr>
+                <tr><td>10–11월</td><td>바깥은 여름</td><td data-person="시현">시현</td></tr>
+                <tr><td>10–11월</td><td>다정한 사람이 이긴다</td><td data-person="지원">지원</td></tr>
               </tbody>
             </table>
           </div>
@@ -122,15 +123,16 @@
             <table class="table" aria-label="12-1월 일정">
               <thead>
                 <tr>
+                  <th scope="col" style="width:8rem">기간</th>
+                  <th scope="col">책 제목</th>
                   <th scope="col" style="width:8rem">담당</th>
-                  <th scope="col">읽는 책</th>
                 </tr>
               </thead>
               <tbody>
-                <tr><td data-person="희수">희수</td><td>지뢰 글리코</td></tr>
-                <tr><td data-person="시현">시현</td><td>일억 번째 여름</td></tr>
-                <tr><td data-person="지원">지원</td><td>바깥은 여름</td></tr>
-                <tr><td data-person="태이">태이</td><td>다정한 사람이 이긴다</td></tr>
+                <tr><td>12–1월</td><td>지뢰 글리코</td><td data-person="희수">희수</td></tr>
+                <tr><td>12–1월</td><td>일억 번째 여름</td><td data-person="시현">시현</td></tr>
+                <tr><td>12–1월</td><td>바깥은 여름</td><td data-person="지원">지원</td></tr>
+                <tr><td>12–1월</td><td>다정한 사람이 이긴다</td><td data-person="태이">태이</td></tr>
               </tbody>
             </table>
           </div>
@@ -140,15 +142,16 @@
             <table class="table" aria-label="2월 일정">
               <thead>
                 <tr>
+                  <th scope="col" style="width:8rem">기간</th>
+                  <th scope="col">책 제목</th>
                   <th scope="col" style="width:8rem">담당</th>
-                  <th scope="col">읽는 책</th>
                 </tr>
               </thead>
               <tbody>
-                <tr><td data-person="시현">시현</td><td>지뢰 글리코</td></tr>
-                <tr><td data-person="지원">지원</td><td>일억 번째 여름</td></tr>
-                <tr><td data-person="태이">태이</td><td>바깥은 여름</td></tr>
-                <tr><td data-person="희수">희수</td><td>다정한 사람이 이긴다</td></tr>
+                <tr><td>2월</td><td>지뢰 글리코</td><td data-person="시현">시현</td></tr>
+                <tr><td>2월</td><td>일억 번째 여름</td><td data-person="지원">지원</td></tr>
+                <tr><td>2월</td><td>바깥은 여름</td><td data-person="태이">태이</td></tr>
+                <tr><td>2월</td><td>다정한 사람이 이긴다</td><td data-person="희수">희수</td></tr>
               </tbody>
             </table>
           </div>
@@ -158,15 +161,16 @@
             <table class="table" aria-label="3-4월 일정">
               <thead>
                 <tr>
+                  <th scope="col" style="width:8rem">기간</th>
+                  <th scope="col">책 제목</th>
                   <th scope="col" style="width:8rem">담당</th>
-                  <th scope="col">읽는 책</th>
                 </tr>
               </thead>
               <tbody>
-                <tr><td data-person="지원">지원</td><td>지뢰 글리코</td></tr>
-                <tr><td data-person="태이">태이</td><td>일억 번째 여름</td></tr>
-                <tr><td data-person="희수">희수</td><td>바깥은 여름</td></tr>
-                <tr><td data-person="시현">시현</td><td>다정한 사람이 이긴다</td></tr>
+                <tr><td>3–4월</td><td>지뢰 글리코</td><td data-person="지원">지원</td></tr>
+                <tr><td>3–4월</td><td>일억 번째 여름</td><td data-person="태이">태이</td></tr>
+                <tr><td>3–4월</td><td>바깥은 여름</td><td data-person="희수">희수</td></tr>
+                <tr><td>3–4월</td><td>다정한 사람이 이긴다</td><td data-person="시현">시현</td></tr>
               </tbody>
             </table>
           </div>
@@ -195,25 +199,25 @@
         <thead>
           <tr>
             <th scope="col" style="width:8rem">기간</th>
+            <th scope="col">책 제목</th>
             <th scope="col" style="width:8rem">담당</th>
-            <th scope="col">읽은 책</th>
           </tr>
         </thead>
         <tbody>
           <!-- 4-5월: 첫 번째 기간 (3권) -->
-          <tr><td>4–5월</td><td data-person="희수">희수</td><td>궤도의 밖에서, 나의 룸메이트에게</td></tr>
-          <tr><td>4–5월</td><td data-person="태이">태이</td><td>지구끝의 온실</td></tr>
-          <tr class="period-end"><td>4–5월</td><td data-person="시현">시현</td><td>여름</td></tr>
+          <tr><td>4–5월</td><td>궤도의 밖에서, 나의 룸메이트에게</td><td data-person="희수">희수</td></tr>
+          <tr><td>4–5월</td><td>지구끝의 온실</td><td data-person="태이">태이</td></tr>
+          <tr class="period-end"><td>4–5월</td><td>여름</td><td data-person="시현">시현</td></tr>
 
           <!-- 6월: 두 번째 기간 (3권 교환) -->
-          <tr><td>6월</td><td data-person="시현">시현</td><td>궤도의 밖에서, 나의 룸메이트에게</td></tr>
-          <tr><td>6월</td><td data-person="희수">희수</td><td>지구끝의 온실</td></tr>
-          <tr class="period-end"><td>6월</td><td data-person="태이">태이</td><td>여름</td></tr>
+          <tr><td>6월</td><td>궤도의 밖에서, 나의 룸메이트에게</td><td data-person="시현">시현</td></tr>
+          <tr><td>6월</td><td>지구끝의 온실</td><td data-person="희수">희수</td></tr>
+          <tr class="period-end"><td>6월</td><td>여름</td><td data-person="태이">태이</td></tr>
 
           <!-- 7-8월: 세 번째 기간 (3권 교환) -->
-          <tr><td>7–8월</td><td data-person="태이">태이</td><td>궤도의 밖에서, 나의 룸메이트에게</td></tr>
-          <tr><td>7–8월</td><td data-person="시현">시현</td><td>지구끝의 온실</td></tr>
-          <tr class="period-end"><td>7–8월</td><td data-person="희수">희수</td><td>여름</td></tr>
+          <tr><td>7–8월</td><td>궤도의 밖에서, 나의 룸메이트에게</td><td data-person="태이">태이</td></tr>
+          <tr><td>7–8월</td><td>지구끝의 온실</td><td data-person="시현">시현</td></tr>
+          <tr class="period-end"><td>7–8월</td><td>여름</td><td data-person="희수">희수</td></tr>
         </tbody>
       </table>
       </div>
